# ai-solution-demos

./: .gitignore  CONTRIBUTING.md  README-sample.md  README-template.md  README.md  test.txt
Vision-language-model-RTSP/: README.md
agentic-finetune/: README_demo.md  agentic-finetune-0.1.13.tgz
ai-custom-code-assistant/: README  README.md  code_generation_pipeline.py  continue_dev_config.yaml
ai-support-assistant/: README.md  af-dag-example.py  ai-support-assistant-dag.py
aie02-airflow-dags/: README.md  ai-support-assistant-dag.py  dougdet-quik.dag  dougdet-quik.py  dougdet-quik2-dag.py  dp_quik.py
anomaly-detection-pcai-demo/: README.md
archived-demos/: README.md
archived-demos/agentic-meetings-simulations/backend/: Dockerfile.prod  pyproject.toml
archived-demos/agentic-meetings-simulations/backend/app/api/routes/: settings.py  system.py  templates.py
archived-demos/agentic-meetings-simulations/backend/app/core/: database.py  exceptions.py  network.py
archived-demos/agentic-meetings-simulations/backend/app/domain/: documents.py
archived-demos/agentic-meetings-simulations/backend/app/models/: __init__.py  meetings.py  roles.py
archived-demos/agentic-meetings-simulations/backend/app/orchestration/: agents.py  prompts.py  state.py  supervisor.py
archived-demos/agentic-meetings-simulations/backend/app/services/: meeting_executor.py
archived-demos/agentic-meetings-simulations/backend/scripts/: seed.py
basic-agent-langflow/: EzPresto_tool.json  README.md  langflow-agent-v1-4-localvectordb.json  langflow-agent-v1-5-passport-localvectordb-mcp.json
(+787 files in other folders)
