[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",

    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "langchain>=1.2.14",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.4",
    "langgraph-checkpoint-postgres>=3.0.5",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pypdf>=6.9.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.42.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = []

[tool.mypy]
strict = true
ignore_missing_imports = true
